SOLR Cloud install for m6 servers - removal of GC options not compatible with Java11 Pipelines config changes Changes to add X-Request-ID tracking for nginx groups.json changes to biocache logging to reduce noise